gcc/testsuite/g++.dg/lookup/ns3.C
// PR c++/32898

namespace N { }

int N::i;	// { dg-error "should have been declared inside" }
